fix the white gap on a non-js view

--- a/site/pages/about-us/timeline-slice/style.css
+++ b/site/pages/about-us/timeline-slice/style.css
@@ -20,10 +20,11 @@
   .image{
     display: none;
   }
+
   .content {
     width: 65%;
     margin: auto;
-    margin-top: 105px;
+    padding-top: 105px;
     padding-bottom: 126px;
   }
 }
